--- a/src/components/SocialProfile/socialProfile.module.scss
+++ b/src/components/SocialProfile/socialProfile.module.scss
@@ -6,20 +6,62 @@
   width: 100%;
   margin-right: auto;
   margin-left: auto;
-  padding: 20px;
+  padding-top: 20px;
+  background-color: darkgrey;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.image {
+  width: 50%;
+  background-color: white;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  margin-bottom: 50px;
+}
+
+.imageContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-bottom: 1px solid black;
+  & p {
+    margin-bottom: 20px;
+  }
+}
+
+.list {
+  display: flex;
+  width: 100%;
+}
+
+.listItems {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 3);
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  &:not(:last-child) {
+    border-right: 1px solid black;
+  }
+  & span:first-child {
+    margin-bottom: 10px;
+  }
+  & span:last-child {
+    font-weight: bold;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .card {
     width: 50%;
-    padding-right: 34px;
-    padding-left: 34px;
   }
 }
 @media screen and (min-width: 1200px) {
   .card {
     width: 50%px;
-    padding-right: 75px;
-    padding-left: 75px;
   }
 }
