--- a/src/components/SocialProfile/socialProfile.module.scss
+++ b/src/components/SocialProfile/socialProfile.module.scss
@@ -4,8 +4,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
   padding-top: 20px;
   background-color: darkgrey;
   border: 1px solid #000000;
@@ -57,11 +55,9 @@
 
 @media screen and (min-width: 768px) {
   .card {
-    width: 50%;
+    width: calc((100% / 2) - 10px);
+    margin-right: 20px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .card {
-    width: 50%px;
-  }
 }
