--- a/src/components/Statistics/statistics.module.scss
+++ b/src/components/Statistics/statistics.module.scss
@@ -3,23 +3,46 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  background-color: darkgrey;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.statisticTitle {
+  text-align: center;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.statisticList {
+  display: flex;
+  width: 100%;
+  height: 50%;
+  border-top: 1px solid black;
+}
+
+.statisticItems {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% / 5);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  &:not(:last-child) {
+    border-right: 1px solid black;
+  }
+  & span:first-child {
+    margin-bottom: 10px;
+  }
+  & span:last-child {
+    font-weight: bold;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .card {
-    width: 50%;
-    padding-right: 34px;
-    padding-left: 34px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .card {
-    width: 50%px;
-    padding-right: 75px;
-    padding-left: 75px;
+    width: calc((100% / 2) - 10px);
   }
 }
