--- a/src/components/FriendList/friendList.module.scss
+++ b/src/components/FriendList/friendList.module.scss
@@ -50,6 +50,7 @@
 @media screen and (min-width: 768px) {
   .card {
     width: calc((100% / 2) - 10px);
+    margin-right: 20px;
     margin-bottom: 0px;
   }
 }
